[Refactor + Bugfix] ExamByteApplication.java Version 18 to Version 21, scanBasePackages fix